--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "@types/node": "^16.18.36",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
+    "react-collapsed": "^4.0.2",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1",
     "react-scripts": "5.0.1",
+    "redux-saga": "^1.2.3",
+    "redux-saga-test-plan": "^4.0.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
